<resources>
    <string name="app_name">FSUTranz</string>
    <string name="parking_tab">Parking</string>
    <string name="bus_tab">Bus</string>
    <string name="map_tab">Map</string>
    <string name="parking_lot">Parking Lot</string>
    <string name="spots">Open Spots</string>
    <string name="spotNum">1001</string>
    <string name="Info">Info</string>
    <string name="announcements">Announcements</string>
    <string name="googleMapsAPI_key">AIzaSyBhtNLkr8cCyx0-ehuHVXctUFRd7TA6llQ</string>
    <string name="appName">GoogleMapsExample</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
