<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/txtParking"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/parking_lot"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_toEndOf="@+id/txtParking"
            android:layout_toRightOf="@+id/txtParking"
            android:text="@string/spots"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/parkingSlots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCapacity"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="23dp"
            android:layout_toEndOf="@+id/progressBar"
            android:layout_toRightOf="@+id/progressBar"
            android:text="@string/spotNum"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="235dp"
            android:layout_height="28dp"
            android:layout_below="@+id/txtParking"
            android:layout_alignStart="@+id/txtParking"
            android:layout_alignLeft="@+id/txtParking"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="12dp"
            android:max="100"
            android:progress="50"
            android:scaleY="8" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>